<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Lander</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="new_">New</string>
	<string name="restart">Restart</string>
	<string name="maps">Maps</string>
	<string name="options">Options</string>
	<string name="about">About</string>
	<string name="altitude">Altitude</string>
	<string name="velocity_x">Velocity X</string>
	<string name="velocity_y">Velocity Y</string>
	<string name="fuel">Fuel</string>
	<string name="end_safe">Congratulations!\nYou have landed safely.</string>
	<string name="end_crash">CRASH!</string>
	<string name="end_crashv1">Too much vertical velocity. Your landing speed must be under 10 m/sec.</string>
	<string name="end_crashv2">Nice crater! All that training really payed off.</string>
	<string name="end_crashv3">You just dug a hole half way to Clavius.</string>
	<string name="end_crashh">Too much horizontal velocity. Your horizontal motion must be less than 1 m/sec.</string>
	<string name="end_crasha">Too steep of an angle. Your angle must be within 5° of level.</string>
	<string name="end_crashs">Missed the landing site. You must land on flat terrain.</string>
	<string name="end_outofrange">Lander Lost!\nYou are out of range of the command module and presumed lost.</string>
	<string name="about_text">Lander is an Android port of the 1990 game by the same name for Windows 3.1.\n\nFull permission and v1.3 source code has been provided by the original developer.\n\nOriginal: George Moromisato (neurohack.com)\nAndroid port: Mark Injerd (aka Pilot_51)</string>
	<string name="classic_options">Classic options</string>
	<string name="gravity">Gravity</string>
	<string name="gravity_summary">Gravity in m/s²</string>
	<string name="fuel_summary">Initial fuel in kg\nAffects mass of lander</string>
	<string name="thrust">Thrust</string>
	<string name="thrust_summary">Thrust of main engine in Newtons (kg * m/s²)</string>
	<string name="drawflame">Draw flame</string>
	<string name="reversesidethrust">Reverse side thrust</string>
	<string name="default_title">Default</string>
	<string name="default_summary">Reset classic options to defaults</string>
	<string name="classic_options_reset">Classic options reset</string>
	<string name="extra_options">Extra options</string>
	<string name="controls">Controls</string>
	<string name="onscreen_controls">On-screen controls</string>
	<string name="btn_scale">Button scale</string>
	<string name="btn_alpha">Button visibility</string>
	<string name="key_assignments">Key assignments</string>
	<string name="controls_nokeys">No physical keyboard detected</string>
	<string name="left">Left</string>
	<string name="right">Right</string>
	<string name="current_button">Current assignment for</string>
	<string name="press_new_button">Press new button.</string>
	<string name="default_controls_title">Reset controls to defaults</string>
	<string name="controls_reset">Controls reset</string>
	<string name="improvements">Improvements</string>
	<string name="improvements_summary">Toggle bugs, quirks, and other things from original game (useful for nostalgia)</string>
	<string name="presets">Presets</string>
	<string name="classic">Classic</string>
	<string name="improved">Improved</string>
	<string name="individual_imp">Individual improvements</string>
	<string name="imp_end_img">Alternate end dialog images</string>
	<string name="imp_end_img_bw">Use original black and white images</string>
	<string name="imp_end_img_color">Use color images</string>
	<string name="imp_lander_alpha">Transparency around lander</string>
	<string name="imp_lander_alpha_on">Lander does not have black box around it</string>
	<string name="imp_lander_alpha_off">Lander has black box around it as in original game</string>
	<string name="gameplay_mod">Gameplay modifications</string>
	<string name="gameplay_mod_summary">Toggle gameplay modifications that have been added exclusively to this Android port of Lander</string>
	<string name="individual_mod">Individual modifications</string>
	<string name="rotation">Rotation</string>
	<string name="rotation_summary">Side thrusters rotate lander instead of changing horizontal velocity</string>
	<string name="map_list">Map list</string>
	<string name="map_list_summary">Save/load maps in a list. Option appears in the menu. You can also create custom maps.</string>
	<string name="map_loaded">Map loaded: %s</string>
	<string name="map_saved">Map saved: %s</string>
	<string name="map_removed">Map removed: %s</string>
	<string name="maps_cleared">Maps cleared.</string>
	<string name="dlg_create_map">Create map</string>
	<string name="dlg_edit_map">Edit map</string>
	<string name="dlg_save_map">Save map</string>
	<string name="invalid_plot">Invalid map plot!</string>
	<string name="edit">Edit</string>
	<string name="remove">Remove</string>
	<string name="create_map">Create custom map</string>
	<string name="save_current">Save current map</string>
	<string name="clear_maps">Clear saved maps</string>
	<string name="map_name">Map name</string>
	<string name="map_plot">Map plot (example: 25 32 42 42 35)</string>
</resources>
