<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<com.pilot51.lander.LanderView
		android:id="@+id/lander"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />
	<RelativeLayout
		android:id="@+id/hud"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp">
		<TextView
			android:id="@+id/altitude"
			android:text="@string/altitude"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:textStyle="bold"
			android:textColor="#fff" />
		<TextView
			android:id="@+id/velocity_x"
			android:text="@string/velocity_x"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/altitude"
			android:gravity="end"
			android:textStyle="bold"
			android:textColor="#fff" />
		<TextView
			android:id="@+id/velocity_y"
			android:text="@string/velocity_y"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/velocity_x"
			android:gravity="end"
			android:textStyle="bold"
			android:textColor="#fff" />
		<TextView
			android:id="@+id/fuel"
			android:text="@string/fuel"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/velocity_y"
			android:gravity="end"
			android:textStyle="bold"
			android:textColor="#fff" />
		<TextView
			android:id="@+id/valueAlt"
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/altitude"
			android:layout_toEndOf="@+id/altitude"
			android:layout_toRightOf="@+id/altitude"
			android:gravity="center_horizontal"
			android:textStyle="bold"
			android:textColor="#fff" />
		<TextView
			android:id="@+id/valueVelX"
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/velocity_x"
			android:layout_toEndOf="@+id/velocity_x"
			android:layout_toRightOf="@+id/velocity_x"
			android:gravity="center_horizontal"
			android:textStyle="bold"
			android:textColor="#fff" />
		<TextView
			android:id="@+id/valueVelY"
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/velocity_y"
			android:layout_toEndOf="@+id/velocity_y"
			android:layout_toRightOf="@+id/velocity_y"
			android:gravity="center_horizontal"
			android:textStyle="bold"
			android:textColor="#fff" />
		<TextView
			android:id="@+id/valueFuel"
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/fuel"
			android:layout_toEndOf="@+id/fuel"
			android:layout_toRightOf="@+id/fuel"
			android:gravity="center_horizontal"
			android:textStyle="bold"
			android:textColor="#fff" />
	</RelativeLayout>
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/hud"
		android:layout_marginEnd="2dp"
		android:layout_marginRight="2dp">
		<Button
			android:id="@+id/btnLeft"
			android:background="@drawable/btn_left"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="2dp"
			android:layout_marginRight="2dp" />
		<Button
			android:id="@+id/btnRight"
			android:background="@drawable/btn_right"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toEndOf="@+id/btnLeft"
			android:layout_toRightOf="@+id/btnLeft" />
		<Button
			android:id="@+id/btnThrust"
			android:background="@drawable/btn_thrust"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/btnLeft"
			android:layout_marginStart="25dp"
			android:layout_marginLeft="25dp"
			android:layout_marginTop="2dp" />
	</RelativeLayout>
</RelativeLayout>
